# wlcc

./: LICENSE  wlcc.cabal  wlcc.lkshw  wlpp.cabal  wlpp.lkshw
src/: Main.hs
src/Assembler/: Data.hs  Parser.hs  Test.hs  Translator.hs
src/Machine/: Data.hs  Test.hs
