Name:                wlcc
Version:             0.1
Synopsis:            WLPP to MIPS compiler
License:             GPL
Author:              Ronuk Raval
Maintainer:          Ronuk Raval <ronuk.raval@gmail.com>
Build-Depends:       base>=4,containers,parsec
Build-Type:          Simple

Executable:          wlcc
hs-source-dirs:      src
Main-is:             Main.hs
