Name:                wlpp
Version:             0.1
Synopsis:            WLPP to MIPS compiler
License:             GPL
Author:              Ronuk Raval
Maintainer:          Ronuk Raval <ronuk.raval@gmail.com>
Build-Depends:       base,containers,parsec
Build-Type:          Simple

Executable:          wlpp
hs-source-dirs:      src
Main-is:             Main.hs
